--- a/Colecionador/index.html
+++ b/Colecionador/index.html
@@ -138,7 +138,7 @@ Aproveitem!!!
 
             <div class="galeria">
             <div class="item-colecao">
-                  <img src="C:\Users\mathe\OneDrive\Desktop\Front\Colecionador\imagens/bowser-preto.png" alt="All Star Bowser">
+                  <img src="C:\Users\mathe\OneDrive\Desktop\Front\Colecionador\imagens\bowser-preto.png" alt="All Star Bowser">
                   <div class="descricao"> Diferente dos modelos anteriores que traziam apenas imagens do personagem, este novo modelo trouxe imagens de duas fases do game Super Mario Bros., a 1ª fase do jogo e uma das fases que se passa dentro de um dos Castelos do game (que eu amo). Pode até parecer meio infantil, mas eu conheço um monte de marmanjo que adorariam ter um destes também. Este par de tênis, como a maioria, foi importado do Japão e somente vendido por lá</div>
         </div>
 
